--- a/public/landing/home/css/style.css
+++ b/public/landing/home/css/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Poppins';
+    font-size: 20px !important;
 }
 
 nav.navbar-3,
@@ -77,7 +78,7 @@ footer {
     background: #163652!important;
     color: #fff;
     padding: 10px;
-    font-size: 12px;
+    font-size: 15px !important;
 }
 
 a.btn.boton-enviar.btn-default {
@@ -119,6 +120,11 @@ a.mx-auto img {
 
 div.div-general {
     box-shadow: 0 8px 6px -6px grey;
+}
+@media (max-width: 446px) {
+    *{
+        font-size: 15px !important;
+    }
 }
 
 @media (min-width: 992px) {
@@ -378,4 +384,12 @@ jdiv#jvlabelWrap {
 
 .dropdown-item:active{
     background-color: #0C2A44; 
+}
+
+footer.div.span{
+    font-size: 15px !important;
+}
+
+footer.div.span.a{
+    font-size: 15px !important;
 }
