--- a/public/landing/home/css/style.css
+++ b/public/landing/home/css/style.css
@@ -393,3 +393,11 @@ footer.div.span{
 footer.div.span.a{
     font-size: 15px !important;
 }
+
+span.badge{
+    font-size: 14px !important;
+}
+th, td, .diaAgenda{
+    font-size: 16px !important;
+}
+
