--- a/public/landing/home/css/style.css
+++ b/public/landing/home/css/style.css
@@ -1,6 +1,10 @@
 * {
     font-family: 'Poppins';
-    font-size: 20px !important;
+    font-size: 20px;
+}
+
+h5.h5.text-center{
+    font-size: 20px;   
 }
 
 nav.navbar-3,
@@ -124,6 +128,9 @@ div.div-general {
 @media (max-width: 446px) {
     *{
         font-size: 15px !important;
+    }
+    .footer_rh{
+        font-size: 12px !important;
     }
 }
 
@@ -386,12 +393,8 @@ jdiv#jvlabelWrap {
     background-color: #0C2A44; 
 }
 
-footer.div.span{
-    font-size: 15px !important;
-}
-
-footer.div.span.a{
-    font-size: 15px !important;
+.footer_rh{
+    font-size: 17px;
 }
 
 span.badge{
