--- a/public/landing/home/css/style.css
+++ b/public/landing/home/css/style.css
@@ -345,6 +345,14 @@ jdiv#jvlabelWrap {
     display: none;
 }
 
+.button_b0cc{
+    display: none;
+}
+
+.wrap_b0c8._orientationRight_3898.__jivoMobileButton {
+    display: none;
+}
+
 .form-inline.diaAgenda.form-control.input{
     width: 180px !important;
     max-width: 180px !important;
